[package]
name = "balala"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow ={ version="0.12.1",features=[]}
glutin = "0.30.7"
glutin-winit = "0.3.0"
once_cell = "1.17.1"
raw-window-handle = "0.5.2"
winit = "0.28.3"
nalgebra = {version = "0.32.2", features = ["bytemuck"]}
bytemuck = "1.13.1"
image = "0.24.6"
fbxcel-dom = "0.0.10"
